crates/glyph-cli/tests/corpus/valid/export_block_no_default.glyph
skill caller()
    description: "Demonstrates an export-block parameter without a default."

    flow:
        helper(".")

export block helper(scope) -> Path
    description: "Helper without a default for scope."

    flow:
        "Inspect {scope}."

    return scope
