crates/glyph-cli/tests/corpus/invalid/flow_assign_rhs_not_call.glyph
skill diagnose() -> Report
    description: "RHS is not a call expression."
    flow:
        x = "literal"
        return x
